[package]
name = "razel-action"
version = "0.1.0"
edition = "2021"
description = "razelv4 execution node-kind: ACTION (run a declared action via a SpawnStrategy, content-keyed) (role: logic)."
license = "MIT OR Apache-2.0"

[dependencies]
razel-core = { path = "../razel-core", version = "0.1.0" }
razel-engine-api = { path = "../razel-engine-api", version = "0.1.0" }
razel-bzl-api = { path = "../razel-bzl-api", version = "0.1.0" }
razel-exec-api = { path = "../razel-exec-api", version = "0.1.0" }

[features]
# RED-FIRST: drop the input content from the ACTION content key → an input edit yields the SAME key, so the
# cache wrongly re-uses the stale output (incrementality breaks). Turns
# `action_key_changes_with_inputs_argv_env_and_is_stable_otherwise` RED (the input-change assertion fails).
mutant_action_ignores_inputs_in_key = []
# RED-FIRST: compute() fabricates a hardcoded output instead of calling the injected SpawnStrategy → the seam is
# bypassed. Turns `action_re_run_uses_strategy_not_a_fabricated_output` (and the headline execute test) RED.
mutant_exec_hardcodes_output = []
